// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform Custom App Challenge Poll Tests should correct elements when method type is standard push only with Custom app authenticator key 1`] = `
{
  "data": {
    "autoChallenge": undefined,
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.custom_app.push.sent",
        },
        "type": "Title",
      },
      {
        "noMargin": true,
        "options": {
          "content": "oie.custom_app.push.warning",
        },
        "type": "Reminder",
      },
      {
        "options": {
          "content": "oie.okta_verify.push.sent.respond_to_continue",
        },
        "type": "Description",
      },
      {
        "contentType": "footer",
        "options": {
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Custom App Challenge Poll Tests should transform elements when method type is standard push only with Custom app authenticator key and include verify with other link when additional options exist in remediation 1`] = `
{
  "data": {
    "autoChallenge": undefined,
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.custom_app.push.sent",
        },
        "type": "Title",
      },
      {
        "noMargin": true,
        "options": {
          "content": "oie.custom_app.push.warning",
        },
        "type": "Reminder",
      },
      {
        "options": {
          "content": "oie.okta_verify.push.sent.respond_to_continue",
        },
        "type": "Description",
      },
      {
        "contentType": "footer",
        "options": {
          "label": "oie.verification.switch.authenticator",
          "onClick": [Function],
          "step": "select-authenticator-authenticate",
        },
        "type": "Link",
      },
      {
        "contentType": "footer",
        "options": {
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify Challenge Poll Tests should transform correct elements when method type is standard push only with Custom app authenticator key 1`] = `
{
  "data": {
    "autoChallenge": undefined,
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.custom_app.push.sent",
        },
        "type": "Title",
      },
      {
        "noMargin": true,
        "options": {
          "content": "oie.custom_app.push.warning",
        },
        "type": "Reminder",
      },
      {
        "options": {
          "content": "oie.okta_verify.push.sent.respond_to_continue",
        },
        "type": "Description",
      },
      {
        "contentType": "footer",
        "options": {
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify Challenge Poll Tests should transform elements when method type is push and has enhanced security when resend is unavailable 1`] = `
{
  "data": {
    "autoChallenge": undefined,
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.okta_verify.push.sent",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.numberchallenge.instruction",
          "dataSe": "numberchallenge-instr-value",
        },
        "type": "Description",
      },
      {
        "noTranslate": true,
        "options": {
          "SVGIcon": [Function],
          "alignment": "center",
          "id": "code",
          "textContent": "42",
        },
        "type": "ImageWithText",
      },
      {
        "contentType": "footer",
        "options": {
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify Challenge Poll Tests should transform elements when method type is push and has enhanced security with resend avaialable 1`] = `
{
  "data": {
    "autoChallenge": undefined,
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.okta_verify.push.sent",
        },
        "type": "Title",
      },
      {
        "noMargin": true,
        "options": {
          "actionParams": {
            "resend": true,
          },
          "content": "oie.numberchallenge.warning",
          "contentClassname": "resend-number-challenge",
          "contentHasHtml": true,
          "isActionStep": true,
          "step": "resend",
        },
        "type": "Reminder",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.numberchallenge.instruction",
          "dataSe": "numberchallenge-instr-value",
        },
        "type": "Description",
      },
      {
        "noTranslate": true,
        "options": {
          "SVGIcon": [Function],
          "alignment": "center",
          "id": "code",
          "textContent": "42",
        },
        "type": "ImageWithText",
      },
      {
        "contentType": "footer",
        "options": {
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify Challenge Poll Tests should transform elements when method type is push and has enhanced security with resend avaialable and include verify with other link when additional options exist in remediation 1`] = `
{
  "data": {
    "autoChallenge": undefined,
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.okta_verify.push.sent",
        },
        "type": "Title",
      },
      {
        "noMargin": true,
        "options": {
          "actionParams": {
            "resend": true,
          },
          "content": "oie.numberchallenge.warning",
          "contentClassname": "resend-number-challenge",
          "contentHasHtml": true,
          "isActionStep": true,
          "step": "resend",
        },
        "type": "Reminder",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.numberchallenge.instruction",
          "dataSe": "numberchallenge-instr-value",
        },
        "type": "Description",
      },
      {
        "noTranslate": true,
        "options": {
          "SVGIcon": [Function],
          "alignment": "center",
          "id": "code",
          "textContent": "42",
        },
        "type": "ImageWithText",
      },
      {
        "contentType": "footer",
        "options": {
          "label": "oie.verification.switch.authenticator",
          "onClick": [Function],
          "step": "select-authenticator-authenticate",
        },
        "type": "Link",
      },
      {
        "contentType": "footer",
        "options": {
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify Challenge Poll Tests should transform elements when method type is standard push only 1`] = `
{
  "data": {
    "autoChallenge": undefined,
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.okta_verify.push.sent",
        },
        "type": "Title",
      },
      {
        "noMargin": true,
        "options": {
          "content": "oktaverify.warning",
        },
        "type": "Reminder",
      },
      {
        "options": {
          "content": "oie.okta_verify.push.sent.respond_to_continue",
        },
        "type": "Description",
      },
      {
        "contentType": "footer",
        "options": {
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify Challenge Poll Tests should transform elements when method type is standard push only and include verify with other link when additional options exist in remediation 1`] = `
{
  "data": {
    "autoChallenge": undefined,
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.okta_verify.push.sent",
        },
        "type": "Title",
      },
      {
        "noMargin": true,
        "options": {
          "content": "oktaverify.warning",
        },
        "type": "Reminder",
      },
      {
        "options": {
          "content": "oie.okta_verify.push.sent.respond_to_continue",
        },
        "type": "Description",
      },
      {
        "contentType": "footer",
        "options": {
          "label": "oie.verification.switch.authenticator",
          "onClick": [Function],
          "step": "select-authenticator-authenticate",
        },
        "type": "Link",
      },
      {
        "contentType": "footer",
        "options": {
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
